[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://debug/manual/unit/test_temporal_graph/test_temporal_graph.gd" id="1_6spxr"]
[ext_resource type="PackedScene" path="res://UI/TemporalGraph/TemporalGraph.tscn" id="1_7sxbf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4egu"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43vmn"]

[node name="TemporalGraphTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6spxr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TemporalGraph" parent="VBoxContainer" instance=ExtResource("1_7sxbf")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 776.0
grow_horizontal = 1
grow_vertical = 1
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
offset_top = 780.0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m4egu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 280.0
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
offset_left = 1280.0
offset_right = 1880.0
offset_bottom = 260.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_43vmn")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
offset_right = 600.0
offset_bottom = 260.0

[node name="FrequencySlider" type="HSlider" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 100)
offset_right = 600.0
offset_bottom = 100.0
size_flags_vertical = 4
max_value = 1.0
step = 0.001

[node name="FrequencyValue" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 104.0
offset_right = 600.0
offset_bottom = 127.0
horizontal_alignment = 1
